# green-final-dbupdate

./: .gitignore  CMakeLists.txt  generate_100W.py  generate_csv.py  main.cc  reademe.md  readme.md  test.py  to_collect_energy.cc  total-energy_10W.csv  total_energy.cc
